# oru_walk_module

include/vrep/: VRepJointInterface.h
nao_vrep/: CMakeLists.txt
nao_vrep/include/: JointInterface.h  oru_robot_interface.h
nao_vrep/nao_vrep_scene/: nao_scene.ttt
nao_vrep/src/: oru_robot_interface.cpp
nao_vrep/src/vrep/: VRepRobotInterface.cpp  example_vrep.cpp
src/: oru_walk.cpp  oru_walk.h  oru_walk_init.cpp  walk_parameters.cpp  walk_parameters.h  walk_patterns.cpp  walking.cpp
src/example_nao/: example.cpp
